# gawk

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel
missing_d/: BUILD.bazel
pc/: BUILD.bazel  popen.c
posix/: BUILD.bazel  config_darwin.h  config_linux.h
support/: BUILD.bazel
test/: BUILD.bazel
