module(
    name = "gawk",
    version = "5.3.1",
    compatibility_level = 1,
)

bazel_dep(name = "aspect_bazel_lib", version = "2.9.4")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "toolchains_musl", version = "0.1.20")

toolchains_musl = use_extension("@toolchains_musl//:toolchains_musl.bzl", "toolchains_musl")
use_repo(toolchains_musl, "musl_toolchains_hub")

register_toolchains("@musl_toolchains_hub//:all")

# bazel_dep(name = "hermetic_cc_toolchain", version = "3.0.1")

# toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
# use_repo(toolchains, "zig_sdk")

# register_toolchains(
#     "@zig_sdk//toolchain:linux_amd64_musl",
#     "@zig_sdk//libc_aware/toolchain:linux_arm64_musl",
#     "@zig_sdk//libc_aware/toolchain:linux_amd64_musl",
#     "@zig_sdk//toolchain:windows_amd64",
#     "@zig_sdk//toolchain:darwin_amd64",
#     "@zig_sdk//toolchain:darwin_arm64",
# )